# ringlet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  release.sh  release.toml  specs.md  specs1.md  specs2.md  specs3.md  specs4.md  specs5.md
.github/workflows/: build-binaries.yml  ci.yml  publish-cargo.yml  publish-chocolatey.yml  publish-homebrew.yml  publish-npm.yml  publish-pypi.yml  publish-rubygems.yml  release.yml
clown-ui/: package-lock.json  package.json
clown-ui/src/api/: client.ts  types.ts
clown-ui/src/router/: index.ts
clown-ui/src/stores/: proxy.ts
crates/clown/: Cargo.toml
crates/clown-core/: Cargo.toml
crates/clown-core/src/: agent.rs  binary.rs  config.rs  error.rs  events.rs  lib.rs  paths.rs  profile.rs  provider.rs  proxy.rs  rpc.rs  usage.rs
crates/clown-scripting/: Cargo.toml
crates/clown-scripting/src/: engine.rs  lib.rs
crates/clown-scripting/src/scripts/: claude.rhai  codex.rhai  droid.rhai  grok.rhai  opencode.rhai
crates/clown/src/: client.rs  main.rs  output.rs
crates/clown/src/commands/: mod.rs
crates/clownd/: Cargo.toml
crates/clownd/src/: agent_registry.rs  claude_import.rs  execution.rs  main.rs  pricing.rs  profile_manager.rs  provider_registry.rs  proxy_manager.rs  registry_client.rs  server.rs  telemetry.rs  usage_watcher.rs  watcher.rs
crates/clownd/src/agent_usage/: claude.rs  codex.rs  mod.rs  opencode.rs
crates/clownd/src/events/: broadcaster.rs
crates/clownd/src/handlers/: agents.rs  aliases.rs  hooks.rs  mod.rs  profiles.rs  providers.rs  proxy.rs  registry.rs  stats.rs  usage.rs
crates/clownd/src/http/: assets.rs  error.rs  mod.rs  server.rs  websocket.rs
crates/clownd/src/http/routes/: agents.rs  hooks.rs  mod.rs  profiles.rs  providers.rs  proxy.rs  registry.rs  stats.rs  system.rs  terminal.rs  usage.rs
crates/clownd/src/terminal/: session.rs
crates/ringlet/: Cargo.toml  tauri.conf.json
crates/ringlet-app/: Cargo.toml  tauri.conf.json
crates/ringlet-app/capabilities/: default.json
crates/ringlet-app/src/: error.rs  lib.rs  main.rs  state.rs
crates/ringlet-app/src/commands/: api_proxy.rs  connection.rs  daemon.rs  mod.rs  native.rs  ws_proxy.rs
crates/ringlet-app/src/daemon/: lifecycle.rs
crates/ringlet-core/: Cargo.toml
crates/ringlet-core/src/: agent.rs  binary.rs  config.rs  error.rs  events.rs  hooks.rs  http_api.rs  lib.rs  paths.rs  profile.rs  provider.rs  proxy.rs  rpc.rs  typescript.rs  usage.rs
crates/ringlet-core/typescript/: api-types.ts
crates/ringlet-scripting/: Cargo.toml
crates/ringlet-scripting/src/: engine.rs  functions.rs  lib.rs
crates/ringlet-scripting/src/scripts/: grok.rhai
crates/ringlet/icons/: icon.icns
crates/ringlet/manifests/agents/: claude.toml  codex.toml  grok.toml  opencode.toml
crates/ringlet/manifests/providers/: minimax.toml
crates/ringlet/src/: client.rs  main.rs  output.rs
crates/ringlet/src/commands/: init.rs  mod.rs
crates/ringlet/src/daemon/: agent_registry.rs  claude_import.rs  execution.rs  mod.rs  pricing.rs  profile_manager.rs  profile_store.rs  provider_registry.rs  proxy_manager.rs  registry_client.rs  secret_store.rs  server.rs  telemetry.rs  usage_watcher.rs  watcher.rs  workspace_service.rs
crates/ringlet/src/daemon/agent_usage/: claude.rs  codex.rs  mod.rs  opencode.rs
crates/ringlet/src/daemon/handlers/: agents.rs  aliases.rs  env.rs  hooks.rs  mod.rs  profiles.rs  providers.rs  proxy.rs  registry.rs  stats.rs  system.rs  terminal.rs  usage.rs  workspace.rs
crates/ringlet/src/daemon/http/: assets.rs  auth.rs  error.rs  mod.rs  path_access.rs  server.rs  terminal_policy.rs  terminal_ws.rs  websocket.rs
crates/ringlet/src/daemon/http/routes/: agents.rs  fs.rs  git.rs  hooks.rs  mod.rs  profiles.rs  providers.rs  proxy.rs  registry.rs  stats.rs  system.rs  terminal.rs  usage.rs
crates/ringlet/src/daemon/terminal/: manager.rs  mod.rs  pty_bridge.rs  sandbox.rs  session.rs
crates/ringlet/src/gui/: mod.rs  state.rs
crates/ringlet/src/gui/commands/: api_proxy.rs  connection.rs  daemon.rs  mod.rs  native.rs  ws_proxy.rs
crates/ringlet/src/gui/connection/: config.rs  mod.rs
crates/ringlet/src/gui/daemon/: lifecycle.rs
crates/ringlet/ui-dist/assets/: DashboardView-CiOL1Fhf.js  Modal.vue_vue_type_script_setup_true_lang-B6xRihxR.js  ProfileDetailView-oz9MyfGy.js  ProxyView-AWk5Ljcy.js  StatusBadge.vue_vue_type_script_setup_true_lang-DO_oPMsR.js  TerminalView-CvIknQQM.css  agents-DvcRERJQ.js
crates/ringletd/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: agents.md  architecture-checklist.md  architecture.md  hooks.md  profiles.md  providers.md  proxy.md  registry.md  scripting.md  usage.md
docs/templates/: agent.example.toml
documentation/: mkdocs.yml
documentation/docs/: contributing.md  index.md  roadmap.md  security.md
documentation/site/: 404.html  index.html  sitemap.xml
manifests/: registry.json
manifests/agents/: claude.toml  codex.toml  droid.toml  grok.toml  opencode.toml
manifests/providers/: minimax-openai.toml  self.toml  zai.toml
manifests/scripts/: claude.rhai  codex.rhai  droid.rhai  opencode.rhai
packaging/arch/: PKGBUILD.template  README.md
packaging/chocolatey/: README.md  clown.nuspec  ringlet.nuspec
packaging/debian/: README.md  control.template  postinst  prerm
packaging/homebrew/: README.md  clown.rb.template  ringlet.rb.template
packaging/msi/: README.md  main.wxs.template
packaging/npm/: README.md  install.js  package.json
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/clown/: __init__.py
packaging/pypi/ringlet/: __init__.py
packaging/rubygems/: README.md  clown-cli.gemspec  ringlet-cli.gemspec
ringlet-ui/: index.html  package-lock.json  package.json  vite.config.ts
ringlet-ui/src/: App.vue  main.ts
scripts/: bump-version.sh  generate-registry.sh
scripts/release/: build.sh  publish-arch.sh  publish-cargo.sh  publish-chocolatey.sh  publish-debian.sh  publish-dmg.sh  publish-homebrew.sh  publish-msi.sh  publish-npm.sh  publish-pypi.sh  publish-rubygems.sh
(+155 files in other folders)
