[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Dipankar Sarkar"]
repository = "https://github.com/neul-labs/ccswitch"
homepage = "https://github.com/neul-labs/ccswitch"
keywords = ["cli", "agent", "orchestrator", "coding"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Platform paths
directories = "5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Scripting
rhai = "1"

# Credentials
keyring = "3"

# Interactive prompts
dialoguer = "0.11"

# Table output
comfy-table = "7"

# File watching
notify = "7"

# IPC messaging
nng = "1.0.1"

# UUID for session tracking
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client for registry
reqwest = { version = "0.12", features = ["json"] }

# SHA256 for checksums
sha2 = "0.10"
hex = "0.4"

# Memory allocator
mimalloc = "0.1"

# Internal crates
clown-core = { path = "crates/clown-core", version = "0.1.0" }
clown-scripting = { path = "crates/clown-scripting", version = "0.1.0" }
