[package]
name = "clown-scripting"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rhai scripting engine for clown configuration generation"
readme = "../../README.md"

[dependencies]
clown-core = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
