[package]
name = "clownd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Background daemon for the clown CLI orchestrator"

[[bin]]
name = "clownd"
path = "src/main.rs"

[dependencies]
clown-core = { workspace = true }
clown-scripting = { path = "../clown-scripting" }

# CLI parsing
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# IPC messaging
nng = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# HTTP client
ureq = { version = "2", features = ["json"] }

# Filesystem watcher
notify = { workspace = true }

# Memory allocator
mimalloc = { workspace = true }
