[package]
name = "ringlet-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Tauri desktop application for the ringlet CLI orchestrator"
readme = "../../README.md"
default-run = "ringlet-app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"

# Workspace dependencies
ringlet-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }

# WebSocket proxy
tokio-tungstenite = { workspace = true }
url = { workspace = true }

# Binary discovery
which = { workspace = true }

[lib]
name = "ringlet_app_lib"
path = "src/lib.rs"

[[bin]]
name = "ringlet-app"
path = "src/main.rs"
