[package]
name = "ringlet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI orchestrator for coding agents"
readme = "../../README.md"

[[bin]]
name = "ringlet"
path = "src/main.rs"

[features]
default = []
gui = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-store",
    "dep:tauri-plugin-process",
    "dep:reqwest",
    "dep:tokio-tungstenite",
    "dep:url",
    "dep:which",
    "dep:thiserror",
]

[dependencies]
ringlet-core = { workspace = true }
ringlet-scripting = { workspace = true }

# CLI parsing
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# IPC messaging
nng = { workspace = true }

# Table output
comfy-table = { workspace = true }

# Interactive prompts
dialoguer = { workspace = true }

# Credentials
keyring = { workspace = true }

# Memory allocator
mimalloc = { workspace = true }

# HTTP client for terminal API (CLI)
ureq = { version = "2", features = ["json"] }

# Platform paths
dirs = { workspace = true }

# Time
chrono = { workspace = true }

# HTTP server (daemon web UI)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }

# UUID (daemon session tracking)
uuid = { workspace = true }

# Asset embedding (daemon)
rust-embed = { workspace = true }
mime_guess = { workspace = true }

# Filesystem watcher (daemon)
notify = { workspace = true }

# Directory walking (daemon)
walkdir = { workspace = true }

# Random number generation (daemon)
getrandom = "0.2"

# Cryptographic hashing (daemon)
sha2 = "0.10"

# Constant-time comparison (daemon)
subtle = "2"

# Secure memory zeroing (daemon)
zeroize = { version = "1", features = ["zeroize_derive"] }

# Rate limiting (daemon)
governor = "0.10"
tower_governor = { version = "0.8", features = ["axum"] }

# PTY support for remote terminal (daemon)
portable-pty = "0.9"

# --- GUI-only dependencies (optional) ---
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
url = { workspace = true, optional = true }
which = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

# Unix process management (daemon)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
