[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clown-cli"
version = "0.1.0"
description = "CLI orchestrator for coding agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Dipankar Sarkar" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["cli", "agent", "orchestrator", "coding"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/neul-labs/ccswitch"
Repository = "https://github.com/neul-labs/ccswitch"
Issues = "https://github.com/neul-labs/ccswitch/issues"

[project.scripts]
clown = "clown:main"
clownd = "clown:main_daemon"

[tool.hatch.build.targets.wheel]
packages = ["clown"]
