[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ringlet-cli"
version = "0.1.0"
description = "One CLI to rule all your coding agents."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Neul Labs", email = "contact@neullabs.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["cli", "agent", "orchestrator", "coding", "ai"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://ringlet.neullabs.com"
Documentation = "https://docs.neullabs.com/ringlet"
Repository = "https://github.com/neul-labs/ringlet"
Issues = "https://github.com/neul-labs/ringlet/issues"

[project.scripts]
ringlet = "ringlet:main"

[tool.hatch.build.targets.wheel]
packages = ["ringlet"]
